--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: Plannio
-description: Birlikte Planlayın, Sade Kalsın.
+description: >
+  <img src="/assets/logo.png" width="96" alt="Plannio Logo" />
+  <br/>
+  Birlikte planlayın, Sade Kalsın.
